# ChangeLog for media-sound/timidity++
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/timidity++/ChangeLog,v 1.44 2005/02/28 10:35:26 eradicator Exp $

  28 Feb 2005; Jeremy Huddleston <eradicator@gentoo.org>
  -files/long-64bit.patch, -files/timidity++-2.12.0-alsalib-fix.patch,
  -files/timidity.cfg, -timidity++-2.12.0-r3.ebuild,
  -timidity++-2.13.0-r1.ebuild, -timidity++-2.13.0-r2.ebuild:
  Cleaned out old versions.

  23 Feb 2005; Chris White <chriswhite@gentoo.org>
  timidity++-2.13.0-r1.ebuild, timidity++-2.13.0-r2.ebuild,
  timidity++-2.13.2.ebuild:
  Fixed ppc portaudio logic and /lib hardcoding (not using get_libdir...)

  22 Dec 2004; Joseph Jezak <josejx@gentoo.org> timidity++-2.13.2.ebuild:
  Marked ppc stable.

  21 Dec 2004; Jeremy Huddleston <eradicator@gentoo.org>
  +files/timidity++-2.13.2-gtk26.patch, timidity++-2.13.2.ebuild:
  Added patch for gtk-2.6 from bug #75208.

  18 Dec 2004; Jeremy Huddleston <eradicator@gentoo.org>
  timidity++-2.13.2.ebuild:
  Don't pull in tk unless we want X also.

  23 Nov 2004; Jeremy Huddleston <eradicator@gentoo.org>
  timidity++-2.13.2.ebuild:
  Stable amd64, sparc, x86.

*timidity++-2.13.2 (07 Oct 2004)

  07 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  -timidity++-2.13.0.ebuild, -timidity++-2.13.0_rc2.ebuild,
  +timidity++-2.13.2.ebuild:
  Version bump and cleanup.

*timidity++-2.13.0-r2 (23 Sep 2004)

  23 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org>
  +files/timidity-update, +files/timidity.cfg-r1,
  +timidity++-2.13.0-r2.ebuild:
  Revision bump to make use of the timidity-update script provided by ohn
  Richard Moser <nigelenki@comcast.net>.

  22 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org>
  timidity++-2.13.0-r1.ebuild:
  Removed sparc conditional around jack.

  15 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org>
  files/init.d.timidity:
  Changed init script to after instead of use for bug #59635.
